@@ -1,3 +1,8 @@
+2002-01-05  Bradford Hovinen  <hovinen@ximian.com>
+
+	* gconf-property-editor.c (peditor_*_value_changed): Only remove
+	from changeset if the changeset is non-NULL
+
 2002-01-04  Bradford Hovinen  <hovinen@ximian.com>
 
 	* gconf-property-editor.c (peditor_set_gconf_value):
